修复登陆功能

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="AI功能平台 - 高端科技，智能未来"
+      content="AI内容创作平台 - 高端科技，智能未来"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AI功能平台</title>
+    <title>AI内容创作平台</title>
   </head>
   <body>
     <noscript>您需要启用JavaScript才能运行此应用程序。</noscript>
